# aartfaac-calibration-pipeline

./: CMakeLists.txt  README.rst
cmake/: sources.cmake  version.h.in
cmake/modules/: FindPipeline.cmake
data/antennasets/: lba_inner.dat.in  lba_sparse_even.dat.in  lba_sparse_odd.dat.in
scripts/: antennaset.py
src/: config.h  main.cpp
src/pipeline/: datablob.cpp  datablob.h
src/pipeline/omodules/: diskwriter.cpp  diskwriter.h  tcpclient.cpp  tcpclient.h
src/pipeline/pmodules/: calibrator.cpp  calibrator.h  flagger.cpp  flagger.h  weighter.cpp  weighter.h
src/server/: packet.h  server.cpp  server.h  stream.cpp  stream.h  stream_handler.cpp  stream_handler.h
src/server/test/: stream_test.cpp
src/utils/: NMSMax.h  align.h  antenna_positions.cpp  antenna_positions.h  sigmaclip.h  timer.h  utils.cpp  utils.h  validators.cpp  validators.h
